# mariadb-exasol-gateway

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: compatibility.md  identity.md  install.md  releasing.md  transactions.md
packaging/: README.md
plugin/: CMakeLists.txt  exasol_arrow_ipc.cc  exasol_arrow_ipc.h  exasol_gw_pushdown.cc  exasol_gw_pushdown.h  exasol_gw_session.cc  exasol_gw_session.h  exasol_gw_sql_generator.cc  exasol_gw_sql_generator.h  exasol_native_write_batch.cc  exasol_native_write_batch.h  exasol_sessiongw_client.cc  exasol_sessiongw_client.h  ha_exasol_gw.cc
plugin/mysql-test/storage_engine/: define_engine.inc
plugin/test/: run_engine_baseline_comparison.sh  run_sessiongw_engine_workload.sh
tools/: build_plugin.sh  configure_mariadb.sh  package_plugin.sh
